# shellac

./: LICENSE  README  ReadlineShell.cabal  Shellac.cabal  shellac-hcar.tex  stack.yaml
home/: index.html
shellac-compatline/: LICENSE  Shellac-compatline.cabal
shellac-compatline/src/System/Console/Shell/Backend/: Compatline.hs
shellac-editline/: Shellac-editline.cabal
shellac-editline/src/System/Console/Shell/Backend/: Editline.hs
shellac-haskeline/: Shellac-haskeline.cabal
shellac-haskeline/System/Console/Shell/Backend/: Haskeline.hs
shellac-readline/: Shellac-readline.cabal
shellac-readline/src/System/Console/Shell/Backend/: Readline.hs
src/: PPrint.hs
src/System/Console/: Regex.hs  Shell.hs
src/System/Console/Shell/: Backend.hs  Commands.hs  ConsoleHandler.hs  Exception.hs  History.hs  PPrint.hs  Regex.hs  RunShell.hs  ShellMonad.hs  Types.hs
src/System/Console/Shell/Backend/: Basic.hs
