Name:           ReadlineShell
Version:        0.1
License:        BSD3
License-File:   LICENSE
Author:         Robert Dockins
Synopsis:       Framework for creating shell envinronments
Category:       Console
Stability:      Alpha
Hs-Source-Dirs:  
   src
Build-Depends:
   base, haskell98, mtl, readline
Extensions:     
   MultiParamTypeClasses FunctionalDependencies
Exposed-modules:
   System.Console.Shell
Other-modules:
   System.Console.Regex
