Name:           Shellac
Version:        0.3
License:        BSD3
License-File:   LICENSE
Author:         Robert Dockins
Synopsis:       Framework for creating shell envinronments
Category:       Console
Stability:      Alpha
Hs-Source-Dir:
   src
Build-Depends:
   base >= 1.0,
   haskell98 >= 1.0,
   mtl >= 1.0,
   stm >= 1.0
Extensions:
   MultiParamTypeClasses
   FunctionalDependencies
   ExistentialQuantification                      
   CPP
-- GADT
-- STM
Exposed-modules:
   System.Console.Shell
   System.Console.Shell.Backend
   System.Console.Shell.Backend.Basic
   System.Console.Shell.Exception
   System.Console.Shell.ShellMonad
Other-modules:
   System.Console.Shell.Regex
   System.Console.Shell.PPrint
   System.Console.Shell.Types
   System.Console.Shell.RunShell
   System.Console.Shell.Commands
