Name:           Shellac
Cabal-Version:  >= 1.2
Build-Type:	Simple
Version:        0.9.1
License:        BSD3
License-File:   LICENSE
Author:         Robert Dockins
Maintainer:     robdockins AT fastmail DOT fm
Category:       User Interfaces
Stability:      Beta
Synopsis:       A framework for creating shell envinronments
Description:
  Shellac is a framework for building read-eval-print style shells.  
  Shells are created by declaratively defining a set of shell commands
  and an evaluation function.  Shellac supports multiple shell backends,
  including a 'basic' backend which uses only Haskell IO primitives and
  a full featured 'readline' backend based on the the Haskell readline
  bindings found in the standard libraries.
  This library attempts to allow users to write shells at a high level
  and still enjoy the advanced features that may be available from a
  powerful line editing package like readline.

Library
  Hs-Source-Dirs:
     src
  Build-Depends:
     base >= 3.0,
     haskell98 >= 1.0,
     mtl >= 1.0,
     directory >= 1.0
  Extensions:
     MultiParamTypeClasses
     FunctionalDependencies
     ExistentialQuantification
     CPP
     UndecidableInstances
     GeneralizedNewtypeDeriving
     FlexibleInstances
     ScopedTypeVariables
  GHC-Options: -XPatternSignatures
  if os(windows)
     GHC-Options: -DBUILD_WINDOWS
  else
     Build-Depends: unix >= 2.2
  Exposed-modules:
     System.Console.Shell
     System.Console.Shell.Backend
     System.Console.Shell.Backend.Basic
     System.Console.Shell.ShellMonad
  Other-modules:
     System.Console.Shell.Regex
     System.Console.Shell.PPrint
     System.Console.Shell.Types
     System.Console.Shell.RunShell
     System.Console.Shell.Commands
     System.Console.Shell.ConsoleHandler
